@@ -7,10 +7,7 @@
 #include "be13_api/bulk_extractor_i.h"
 #include "utils.h"
 
-using namespace std;
-
 static uint8_t xor_mask = 255;
-
 extern "C"
 void scan_xor(const class scanner_params &sp,const recursion_control_block &rcb)
 {
@@ -48,21 +45,18 @@ void scan_xor(const class scanner_params &sp,const recursion_control_block &rcb)
             }
         }
 
-        // It's not clear that we need to check dbuf.buf below, since the failure
-        // should throw an exception...
+        // managed_malloc throws an exception if allocation fails.
         managed_malloc<uint8_t>dbuf(sbuf.bufsize);
-        if(dbuf.buf){                   
-            for(size_t ii = 0; ii < sbuf.bufsize; ii++) {
-                dbuf.buf[ii] = sbuf.buf[ii] ^ xor_mask;
-            }
-            
-            std::stringstream ss;
-            ss << "XOR(" << uint32_t(xor_mask) << ")";
-            
-            const pos0_t pos0_xor = pos0 + ss.str();
-            const sbuf_t child_sbuf(pos0_xor, dbuf.buf, sbuf.bufsize, sbuf.pagesize, false);
-            scanner_params child_params(sp, child_sbuf);
-            (*rcb.callback)(child_params);// call scanners on deobfuscated buffer
+        for(size_t ii = 0; ii < sbuf.bufsize; ii++) {
+            dbuf.buf[ii] = sbuf.buf[ii] ^ xor_mask;
         }
+        
+        std::stringstream ss;
+        ss << "XOR(" << uint32_t(xor_mask) << ")";
+        
+        const pos0_t pos0_xor = pos0 + ss.str();
+        const sbuf_t child_sbuf(pos0_xor, dbuf.buf, sbuf.bufsize, sbuf.pagesize, false);
+        scanner_params child_params(sp, child_sbuf);
+        (*rcb.callback)(child_params);    // recurse on deobfuscated buffer
     }
 }
