@@ -1,3 +1,9 @@
+2013-10-26  Basic  <simsong@Mucha.local>
+
+	* src/be13_api/bulk_extractor_i.h: process_packet_info renamed to process_packet.
+
+	* src/be13_api/sbuf.h (class sbuf_t): removed pos0_t from map_file because it can be inferred.
+
 2013-09-27  Basic  <simsong@ncr.nps.edu>
 
 	* python/bulk_extractor_reader.py (BulkReport): changed .imagefile() to .image_filename
@@ -46,7 +52,6 @@
 2013-09-16  Simson Garfinkel  <simsong@npsair.local>
 
 	* configure.ac: incremented version to 1.4.1-dev. Enabled LT_INIT support; removed RANLIB support.
->>>>>>> 5eeb58abd167767344dcecea249f1fd0480e1df2
 
 2013-08-20  Basic  <simsong@Mucha.local>
 
